Update env with r-essentials

--- a/env.yml
+++ b/env.yml
@@ -212,6 +212,7 @@ dependencies:
   - r-duckdb=0.7.0=r42h38f115c_0
   - r-e1071=1.7_13=r42h38f115c_0
   - r-ellipsis=0.3.2=r42h06615bd_1
+  - r-essentials
   - r-evaluate=0.20=r42hc72bb7e_0
   - r-fansi=1.0.4=r42h133d619_0
   - r-farver=2.1.1=r42h7525677_1
@@ -377,4 +378,4 @@ dependencies:
   - xz=5.2.10=h5eee18b_1
   - zlib=1.2.13=h166bdaf_4
   - zstd=1.5.5=hc292b87_0
-prefix: /home/ubuntu/.conda/envs/GBIF_env
+# prefix: /home/ubuntu/.conda/envs/GBIF_env
