Stubbed env var in sample files.

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,4 @@ db_pass=dbpassword
 GBIF_HOME=/media/volume/sdb
 taxonomy_home=/media/volume/sdb/gbif_taxonomy
 REDIS_URL=redis://...
+S3_BUCKET=ednaexplorer_staging
