--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
           sudo apt-get install -y sshpass
           echo "Attempting to deploy to $DEPLOY_ENVIRONMENT environment"
           echo "Copying files to server located at $SSH_ADDRESS"
-          sshpass -p "${{ env.SSH_PASSWORD }}" scp -o StrictHostKeyChecking=no -r ./* ${{ env.SSH_USER }}@${{ env.SSH_ADDRESS }}:/home/ubuntu/eDNAExplorer
+          scp -i "${{ env.SSH_KEY }}" -o StrictHostKeyChecking=no -r ./* ${{ env.SSH_USER }}@${{ env.SSH_ADDRESS }}:/home/ubuntu/eDNAExplorer
           echo "Finished deploying to $DEPLOY_ENVIRONMENT environment"
