--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Set up SSH key
+      - run: |
+          echo "${{ env.SSH_KEY }}" > ssh_key.pem
+          chmod 600 ssh_key.pem
+          ssh-add ./ssh_key.pem
       - name: Deploy to server
         run: |
           sudo apt-get update
           sudo apt-get install -y sshpass
           echo "Attempting to deploy to $DEPLOY_ENVIRONMENT environment"
           echo "Copying files to server located at $SSH_ADDRESS"
-          scp -i "${{ env.SSH_KEY }}" -o StrictHostKeyChecking=no -r ./* ${{ env.SSH_USER }}@${{ env.SSH_ADDRESS }}:/home/ubuntu/eDNAExplorer
+          scp -i ./ssh_key.pem -o StrictHostKeyChecking=no -r ./* ${{ env.SSH_USER }}@${{ env.SSH_ADDRESS }}:/home/ubuntu/eDNAExplorer
           echo "Finished deploying to $DEPLOY_ENVIRONMENT environment"
