--- a/env.yml
+++ b/env.yml
@@ -1,47 +1,24 @@
-name: GBIF_env
+name: reports
 channels:
-  - jmcmurray
-  - travis
-  - r
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - _r-mutex=1.0.0=anacondar_1
-  - altair=3.3.0=py27_0
-  - aws-c-auth=0.6.24=h84a1944_5
-  - aws-c-cal=0.5.20=hc60faf5_6
-  - aws-c-common=0.8.11=h0b41bf4_0
-  - aws-c-compression=0.2.16=h034cb4b_3
-  - aws-c-event-stream=0.2.18=h75388cd_6
-  - aws-c-http=0.7.4=hf084cc8_2
-  - aws-c-io=0.13.17=h10df833_2
-  - aws-c-mqtt=0.8.6=hc41645a_6
-  - aws-c-s3=0.2.4=h1b8f470_3
-  - aws-c-sdkutils=0.1.7=h034cb4b_3
-  - aws-checksums=0.1.14=h034cb4b_3
-  - aws-crt-cpp=0.19.7=h0073717_7
-  - aws-sdk-cpp=1.10.57=h4707e7a_4
-  - backports=1.0=pyhd8ed1ab_3
+  - azure-core-cpp=1.10.3=h91d86a7_0
+  - azure-storage-blobs-cpp=12.10.0=h00ab1b0_0
+  - azure-storage-common-cpp=12.5.0=hb858b4b_2
   - binutils_impl_linux-64=2.40=hf600244_0
-  - blosc=1.21.3=h6a678d5_0
-  - boost-cpp=1.78.0=h75c5d50_1
-  - branca=0.2.0=py27_0
-  - bwidget=1.9.11=1
+  - blosc=1.21.5=h0f2a231_0
+  - bwidget=1.9.16=h9eba36c_0
   - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.0=h5eee18b_0
-  - ca-certificates=2023.7.22=hbcca054_0
-  - cachetools=3.1.1=py_0
-  - cairo=1.16.0=ha61ee94_1014
-  - certifi=2016.9.26=py27_0
-  - cfitsio=4.2.0=hd9d235c_0
-  - configparser=3.7.3=py27h8c360ce_2
-  - curl=7.88.1=hdc1c0ab_0
-  - earthengine-api=0.1.253=pyh44b312d_0
-  - entrypoints=0.3=py27h8c360ce_1001
-  - expat=2.5.0=h27087fc_0
-  - folium=0.4.0=py27_0
+  - c-ares=1.25.0=hd590300_0
+  - ca-certificates=2023.12.12=h06a4308_0
+  - cairo=1.18.0=h3faef2a_0
+  - cfitsio=4.3.1=hbdc6101_0
+  - curl=8.5.0=hca28451_0
+  - expat=2.5.0=h6a678d5_0
   - font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
   - font-ttf-inconsolata=2.001=hcb22688_0
   - font-ttf-source-code-pro=2.030=hd3eb1b0_0
@@ -50,332 +27,227 @@ dependencies:
   - fonts-anaconda=1=h8fa9717_0
   - fonts-conda-ecosystem=1=hd3eb1b0_0
   - freetype=2.12.1=h4a9f257_0
-  - freexl=1.0.6=h27cfd23_0
+  - freexl=2.0.0=hf309648_0
   - fribidi=1.0.10=h7b6447c_0
-  - functools=0.5=py27_0
-  - functools32=3.2.3.2=py_3
-  - future=0.18.2=py27h8c360ce_1
-  - gcc_impl_linux-64=12.2.0=hcc96c02_19
-  - geos=3.11.1=h27087fc_0
-  - geotiff=1.7.1=h7157cca_5
+  - gcc_impl_linux-64=13.2.0=h338b0a0_3
+  - geos=3.12.1=h59595ed_0
+  - geotiff=1.7.1=h6b2125f_15
   - gettext=0.21.1=h27087fc_0
-  - gflags=2.2.2=he6710b0_0
-  - gfortran_impl_linux-64=12.2.0=h55be85b_19
+  - gfortran_impl_linux-64=13.2.0=h76e1118_3
   - giflib=5.2.1=h5eee18b_3
-  - glog=0.6.0=h6f12383_0
-  - google-api-python-client=1.7.12=pyh8c360ce_0
-  - google-auth=1.16.1=pyh9f0ad1d_0
-  - google-auth-httplib2=0.0.4=pyh9f0ad1d_0
-  - google-cloud-core=0.24.1=py27_0
-  - google-cloud-storage=1.1.1=py27_0
-  - google-resumable-media=0.0.2=py27_0
-  - googleapis-common-protos=1.51.0=py27_1
   - graphite2=1.3.14=h295c915_1
-  - gsl=2.7.1=h6e86dc7_1
-  - gxx_impl_linux-64=12.2.0=hcc96c02_19
-  - harfbuzz=6.0.0=h8e241bc_0
-  - hdf4=4.2.15=h9772cbc_5
-  - hdf5=1.12.2=nompi_h4df4325_101
-  - httplib2=0.18.1=pyh9f0ad1d_0
-  - icu=70.1=h27087fc_0
-  - jinja2=2.11.3=pyh44b312d_0
-  - jpeg=9e=h5eee18b_1
-  - json-c=0.16=h5eee18b_0
-  - jsonschema=2.6.0=py27_1002
-  - kealib=1.5.0=ha7026e8_0
-  - kernel-headers_linux-64=2.6.32=he073ed8_15
+  - gxx_impl_linux-64=13.2.0=h338b0a0_3
+  - harfbuzz=8.3.0=h3d44ed6_0
+  - hdf4=4.2.15=h2a13503_7
+  - hdf5=1.14.3=nompi_h4f84152_100
+  - icu=73.2=h59595ed_0
+  - json-c=0.17=h7ab15ed_0
+  - kealib=1.5.3=h2f55d51_0
+  - kernel-headers_linux-64=2.6.32=he073ed8_16
   - keyutils=1.6.1=h166bdaf_0
-  - krb5=1.20.1=h81ceb04_0
-  - lcms2=2.14=hfd0df8a_1
+  - krb5=1.21.2=h659d440_0
+  - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.40=h41732ed_0
   - lerc=4.0.0=h27087fc_0
-  - libabseil=20220623.0=cxx17_h05df665_6
-  - libaec=1.0.6=hcb278e6_1
-  - libarrow=10.0.1=h2ebd325_10_cpu
+  - libabseil=20230802.1=cxx17_h59595ed_0
+  - libaec=1.1.2=h59595ed_1
+  - libarchive=3.7.2=h2aa1ff5_1
   - libblas=3.9.0=16_linux64_openblas
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libcblas=3.9.0=16_linux64_openblas
   - libcrc32c=1.1.2=h6a678d5_0
-  - libcurl=7.88.1=hdc1c0ab_0
-  - libdeflate=1.17=h5eee18b_0
-  - libedit=3.1.20221030=h5eee18b_0
+  - libcurl=8.5.0=hca28451_0
+  - libdeflate=1.19=hd590300_0
+  - libedit=3.1.20230828=h5eee18b_0
   - libev=4.33=h7f8727e_1
-  - libevent=2.1.10=h28343ad_4
-  - libffi=3.4.2=h6a678d5_6
-  - libgcc-devel_linux-64=12.2.0=h3b97bd3_19
-  - libgcc-ng=12.2.0=h65d4601_19
-  - libgdal=3.6.2=h10cbb15_3
-  - libgfortran-ng=12.2.0=h69a702a_19
-  - libgfortran5=12.2.0=h337968e_19
-  - libgit2=1.6.2=h1f77430_0
-  - libglib=2.74.1=h606061b_1
-  - libgomp=12.2.0=h65d4601_19
-  - libgoogle-cloud=2.7.0=h21dfe5b_1
-  - libgrpc=1.51.1=h4fad500_1
-  - libiconv=1.17=h166bdaf_0
-  - libkml=1.3.0=h37653c0_1015
+  - libexpat=2.5.0=hcb278e6_1
+  - libffi=3.4.4=h6a678d5_0
+  - libgcc-devel_linux-64=13.2.0=ha9c7c90_103
+  - libgcc-ng=13.2.0=h807b86a_3
+  - libgdal=3.8.3=hcd1fc54_0
+  - libgfortran-ng=13.2.0=h69a702a_3
+  - libgfortran5=13.2.0=ha4646dd_3
+  - libglib=2.78.3=h783c2da_0
+  - libgomp=13.2.0=h807b86a_3
+  - libgoogle-cloud=2.12.0=h5206363_4
+  - libgrpc=1.59.3=hd6c4280_0
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - libkml=1.3.0=h096b73e_7
   - liblapack=3.9.0=16_linux64_openblas
-  - libnetcdf=4.8.1=nompi_h261ec11_106
-  - libnghttp2=1.52.0=h61bc06f_0
-  - libnsl=2.0.0=h5eee18b_0
+  - libnetcdf=4.9.2=nompi_h9612171_113
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnsl=2.0.1=hd590300_0
   - libopenblas=0.3.21=h043d6bf_0
   - libpng=1.6.39=h5eee18b_0
-  - libpq=15.2=hb675445_0
-  - libprotobuf=3.21.12=h3eb15da_0
-  - librttopo=1.1.0=ha49c73b_12
-  - libsanitizer=12.2.0=h46fd767_19
-  - libsodium=1.0.18=h7b6447c_0
-  - libspatialite=5.0.1=h7c8129e_22
-  - libsqlite=3.40.0=h753d276_0
-  - libssh2=1.10.0=hf14f497_3
-  - libstdcxx-devel_linux-64=12.2.0=h3b97bd3_19
-  - libstdcxx-ng=12.2.0=h46fd767_19
-  - libthrift=0.18.0=h5e4af38_0
-  - libtiff=4.5.0=h6adf6a1_2
-  - libutf8proc=2.8.0=h166bdaf_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.4=h5eee18b_1
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.10.3=h7463322_0
-  - libzip=1.9.2=hc929e4a_1
-  - libzlib=1.2.13=h166bdaf_4
+  - libpq=16.1=h33b98f1_7
+  - libprotobuf=4.24.4=hf27288f_0
+  - libre2-11=2023.06.02=h7a70373_0
+  - librttopo=1.1.0=h8917695_15
+  - libsanitizer=13.2.0=h7e041cc_3
+  - libspatialite=5.1.0=h7bd4643_4
+  - libsqlite=3.44.2=h2797004_0
+  - libssh2=1.11.0=h0841786_0
+  - libstdcxx-devel_linux-64=13.2.0=ha9c7c90_103
+  - libstdcxx-ng=13.2.0=h7e041cc_3
+  - libtiff=4.6.0=ha9c0a0a_2
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.3.2=h5eee18b_0
+  - libxcb=1.15=h7f8727e_0
+  - libxml2=2.12.4=h232c23b_1
+  - libzip=1.10.1=h2629f0a_3
+  - libzlib=1.2.13=hd590300_5
   - lz4-c=1.9.4=h6a678d5_0
+  - lzo=2.10=h7b6447c_2
   - make=4.2.1=h1bed415_1
-  - markupsafe=1.1.1=py27hdf8410d_1
+  - minizip=4.0.3=hf59b114_0
   - ncurses=6.4=h6a678d5_0
-  - nspr=4.35=h27087fc_0
-  - nss=3.88=he45b914_0
-  - numpy=1.15.4=py27h8b7e671_1002
-  - openjpeg=2.5.0=hfec8fc6_2
-  - openssl=3.1.2=hd590300_0
-  - orc=1.8.2=hfdbbad2_2
-  - os=0.1.4=0
-  - pandas=0.24.2=py27hb3f55d8_0
+  - nspr=4.35=h6a678d5_0
+  - nss=3.96=h1d7d5a4_0
+  - openjpeg=2.5.0=h488ebb8_3
+  - openssl=3.2.0=hd590300_1
   - pandoc=2.12=h06a4308_3
-  - pango=1.50.13=hd33c08f_0
-  - pcre2=10.40=hc3806b6_0
-  - pip=19.3.1=py27_0
-  - pixman=0.40.0=h7f8727e_1
-  - poppler=22.12.0=h091648b_1
+  - pango=1.50.14=ha41ecd1_2
+  - pcre2=10.42=hebb0a14_0
+  - pixman=0.43.0=h59595ed_0
+  - poppler=23.12.0=h590f24d_0
   - poppler-data=0.4.11=h06a4308_1
-  - postgresql=15.2=h3248436_0
-  - proj=9.1.0=h8ffa02c_1
-  - protobuf=3.3.2=py27_0
-  - pyasn1=0.4.8=py_0
-  - pyasn1-modules=0.2.7=py_0
-  - python=2.7.18=h42bf7aa_3
-  - python-dateutil=2.8.1=py_0
-  - python_abi=2.7=1_cp27mu
-  - pytz=2019.3=py_0
-  - qutil=3.2.1=6
-  - r-anytime=0.3.9=r42ha503ecb_2
-  - r-arrow=10.0.1=r42hcb278e6_0
-  - r-askpass=1.1=r42h06615bd_3
-  - r-assertthat=0.2.1=r42hc72bb7e_3
-  - r-backports=1.4.1=r42h06615bd_1
-  - r-base=4.2.2=ha7d60f8_3
-  - r-base64enc=0.1_3=r42h06615bd_1005
-  - r-biocmanager=1.30.22=r42hc72bb7e_0
-  - r-bit=4.0.5=r42h06615bd_0
-  - r-bit64=4.0.5=r42h06615bd_1
-  - r-blob=1.2.3=r42hc72bb7e_1
-  - r-brew=1.0_8=r42hc72bb7e_1
-  - r-brio=1.1.3=r42h06615bd_1
-  - r-bslib=0.4.2=r42hc72bb7e_0
-  - r-cachem=1.0.7=r42h133d619_0
-  - r-callr=3.7.3=r42hc72bb7e_0
-  - r-class=7.3_21=r42h133d619_0
-  - r-classint=0.4_9=r42hac0b197_0
-  - r-cli=3.6.0=r42h38f115c_0
-  - r-clipr=0.8.0=r42hc72bb7e_1
-  - r-cluster=2.1.4=r42h8da6f51_0
-  - r-colorspace=2.1_0=r42h133d619_0
-  - r-commonmark=1.8.1=r42h06615bd_0
-  - r-conditionz=0.1.0=r42hc72bb7e_2
-  - r-cpp11=0.4.3=r42hc72bb7e_0
-  - r-crayon=1.5.2=r42hc72bb7e_1
-  - r-credentials=1.3.2=r42hc72bb7e_1
-  - r-crosstalk=1.2.0=r42hc72bb7e_2
-  - r-crul=1.3=r42h785f33e_1
-  - r-curl=4.3.3=r42h06615bd_1
-  - r-data.table=1.14.8=r42h133d619_0
-  - r-dbi=1.1.3=r42hc72bb7e_1
-  - r-dbplyr=2.3.1=r42hc72bb7e_0
-  - r-desc=1.4.2=r42hc72bb7e_1
-  - r-devtools=2.4.5=r42hc72bb7e_1
-  - r-diffobj=0.3.5=r42h06615bd_1
-  - r-digest=0.6.31=r42h38f115c_0
-  - r-downlit=0.4.2=r42hc72bb7e_1
-  - r-dplyr=1.1.0=r42h38f115c_0
-  - r-duckdb=0.7.0=r42h38f115c_0
-  - r-e1071=1.7_13=r42h38f115c_0
-  - r-ellipsis=0.3.2=r42h06615bd_1
-  - r-essentials
-  - r-evaluate=0.20=r42hc72bb7e_0
-  - r-fansi=1.0.4=r42h133d619_0
-  - r-farver=2.1.1=r42h7525677_1
-  - r-fastmap=1.1.1=r42h38f115c_0
-  - r-fontawesome=0.5.0=r42hc72bb7e_0
-  - r-formatr=1.14=r42hc72bb7e_1
-  - r-fs=1.6.1=r42h38f115c_0
-  - r-futile.logger=1.4.3=r42hc72bb7e_1005
-  - r-futile.options=1.0.1=r42hc72bb7e_1004
-  - r-generics=0.1.3=r42hc72bb7e_1
-  - r-gert=1.9.2=r42h492061e_1
-  - r-ggplot2=3.4.1=r42hc72bb7e_0
-  - r-gh=1.4.0=r42hc72bb7e_0
-  - r-gitcreds=0.1.2=r42hc72bb7e_1
-  - r-glue=1.6.2=r42h06615bd_1
-  - r-gtable=0.3.1=r42hc72bb7e_1
-  - r-hexbin=1.28.3=r42hac0b197_0
-  - r-highr=0.10=r42hc72bb7e_0
-  - r-htmltools=0.5.4=r42h38f115c_0
-  - r-htmlwidgets=1.6.1=r42hc72bb7e_0
-  - r-httpcode=0.3.0=r42ha770c72_2
-  - r-httpuv=1.6.9=r42h38f115c_0
-  - r-httr=1.4.3=r42h6115d3f_0
-  - r-httr2=0.2.2=r42hc72bb7e_1
-  - r-ini=0.3.1=r42hc72bb7e_1004
-  - r-isoband=0.2.7=r42h38f115c_1
-  - r-jquerylib=0.1.4=r42hc72bb7e_1
-  - r-jsonlite=1.8.0=r42h76d94ec_0
-  - r-kernsmooth=2.23_20=r42hd009a43_1
-  - r-knitr=1.42=r42hc72bb7e_1
-  - r-labeling=0.4.2=r42hc72bb7e_2
-  - r-lambda.r=1.2.4=r42hc72bb7e_3
-  - r-later=1.3.0=r42h7525677_1
-  - r-lattice=0.20_45=r42h76d94ec_0
-  - r-lazyeval=0.2.2=r42h06615bd_3
-  - r-lifecycle=1.0.3=r42hc72bb7e_1
-  - r-lubridate=1.8.0=r42h884c59f_0
-  - r-magrittr=2.0.3=r42h06615bd_1
-  - r-mass=7.3_58.2=r42h133d619_0
-  - r-matrix=1.5_3=r42h5f7b363_0
-  - r-memoise=2.0.1=r42hc72bb7e_1
-  - r-mgcv=1.8_41=r42h5f7b363_0
-  - r-mime=0.12=r42h06615bd_1
-  - r-miniui=0.1.1.1=r42hc72bb7e_1003
-  - r-munsell=0.5.0=r42hc72bb7e_1005
-  - r-nlme=3.1_162=r42hac0b197_0
-  - r-oai=0.4.0=r42hc72bb7e_0
-  - r-openssl=2.0.5=r42habfbb5e_0
-  - r-permute=0.9_7=r42hc72bb7e_2
-  - r-pillar=1.8.1=r42hc72bb7e_1
-  - r-pkgbuild=1.4.0=r42hc72bb7e_0
-  - r-pkgconfig=2.0.3=r42hc72bb7e_2
-  - r-pkgdown=2.0.7=r42hc72bb7e_0
-  - r-pkgload=1.3.2=r42hc72bb7e_0
-  - r-plogr=0.2.0=r42hc72bb7e_1004
-  - r-plotly=4.10.2=r42hc72bb7e_1
-  - r-plumber=1.2.1=r42hc72bb7e_1
-  - r-plyr=1.8.8=r42h7525677_0
-  - r-praise=1.0.0=r42hc72bb7e_1006
-  - r-prettyunits=1.1.1=r42hc72bb7e_2
-  - r-processx=3.8.0=r42h06615bd_0
-  - r-profvis=0.3.7=r42h06615bd_1
-  - r-promises=1.2.0.1=r42h7525677_1
-  - r-proxy=0.4_27=r42h06615bd_1
-  - r-ps=1.7.2=r42h06615bd_0
-  - r-purrr=1.0.1=r42h133d619_0
-  - r-r6=2.5.1=r42hc72bb7e_1
-  - r-ragg=1.2.5=r42hd65d3ba_0
-  - r-rappdirs=0.3.3=r42h06615bd_1
-  - r-rcmdcheck=1.4.0=r42h785f33e_1
-  - r-rcolorbrewer=1.1_3=r42h6115d3f_0
-  - r-rcpp=1.0.10=r42h38f115c_0
-  - r-rematch2=2.1.2=r42hc72bb7e_2
-  - r-remotes=2.4.2=r42hc72bb7e_1
-  - r-rgbif=3.7.5=r42hc72bb7e_0
-  - r-rlang=1.1.1=r42ha503ecb_1
-  - r-rmarkdown=2.20=r42hc72bb7e_0
-  - r-roxygen2=7.2.3=r42h38f115c_0
-  - r-rpostgresql=0.7_4=r42he1f1ca1_2
-  - r-rprojroot=2.0.3=r42hc72bb7e_1
-  - r-rsqlite=2.3.0=r42h38f115c_0
-  - r-rstudioapi=0.14=r42hc72bb7e_1
-  - r-rversions=2.1.2=r42hc72bb7e_1
-  - r-s2=1.1.1=r42h5be344c_0
-  - r-sass=0.4.5=r42h38f115c_0
-  - r-scales=1.2.1=r42hc72bb7e_1
-  - r-sessioninfo=1.2.2=r42hc72bb7e_1
-  - r-sf=1.0_7=r42h282678f_6
-  - r-shiny=1.7.4=r42h785f33e_0
-  - r-snakecase=0.11.0=r42hc72bb7e_3
-  - r-sodium=1.2.1=r42h06615bd_1
-  - r-sourcetools=0.1.7_1=r42h38f115c_0
-  - r-sp=1.4_7=r42h76d94ec_0
-  - r-stringi=1.7.12=r42h1ae9187_0
-  - r-stringr=1.5.0=r42h785f33e_0
-  - r-swagger=3.33.1=r42hc72bb7e_1
-  - r-sys=3.4.1=r42h06615bd_0
-  - r-systemfonts=1.0.4=r42h0ff29ef_1
-  - r-testthat=3.1.6=r42h38f115c_0
-  - r-textshaping=0.3.6=r42hbb20487_4
-  - r-tibble=3.1.8=r42h06615bd_1
-  - r-tidyr=1.3.0=r42h38f115c_0
-  - r-tidyselect=1.2.0=r42hc72bb7e_0
-  - r-tinytex=0.44=r42hc72bb7e_0
-  - r-triebeard=0.3.0=r42h7525677_1005
-  - r-units=0.8_1=r42h38f115c_0
-  - r-urlchecker=1.0.1=r42hc72bb7e_1
-  - r-urltools=1.7.3=r42h7525677_3
-  - r-usethis=2.1.6=r42hc72bb7e_1
-  - r-utf8=1.2.3=r42h133d619_0
-  - r-uuid=1.1_1=r42h57805ef_0
-  - r-vctrs=0.5.2=r42h38f115c_0
-  - r-vegan=2.6_4=r42hb20cf53_0
-  - r-venndiagram=1.7.3=r42hc72bb7e_2
-  - r-viridislite=0.4.1=r42hc72bb7e_1
-  - r-waldo=0.4.0=r42hc72bb7e_1
-  - r-webutils=1.1=r42h06615bd_2
-  - r-wellknown=0.7.4=r42h7525677_1
-  - r-whisker=0.4.1=r42hc72bb7e_0
-  - r-withr=2.5.0=r42hc72bb7e_1
-  - r-wk=0.7.1=r42h38f115c_0
-  - r-xfun=0.37=r42h38f115c_0
-  - r-xml2=1.3.3=r42h044e5c7_2
-  - r-xopen=1.0.0=r42hc72bb7e_1004
-  - r-xtable=1.8_4=r42hc72bb7e_4
-  - r-yaml=2.3.7=r42h133d619_0
-  - r-zip=2.2.2=r42h06615bd_0
-  - r-zoo=1.8_10=r42h76d94ec_0
-  - re2=2023.02.01=hcb278e6_0
+  - postgresql=16.1=h7387d8b_7
+  - proj=9.3.1=he5811b7_0
+  - r-askpass=1.2.0=r43h76d94ec_0
+  - r-base=4.3.2=hb8ee39d_1
+  - r-base64enc=0.1_3=r43h76d94ec_4
+  - r-brio=1.1.3=r43h76d94ec_0
+  - r-bslib=0.5.1=r43h6115d3f_0
+  - r-cachem=1.0.8=r43h76d94ec_0
+  - r-callr=3.7.3=r43h6115d3f_0
+  - r-class=7.3_22=r43h76d94ec_0
+  - r-classint=0.4_10=r43h640688f_0
+  - r-cli=3.6.1=r43h884c59f_0
+  - r-cluster=2.1.4=r43h640688f_0
+  - r-colorspace=2.1_0=r43h76d94ec_0
+  - r-commonmark=1.9.0=r43h76d94ec_0
+  - r-conditionz=0.1.0=r43h142f84f_0
+  - r-cpp11=0.4.6=r43h6115d3f_0
+  - r-crayon=1.5.2=r43h6115d3f_0
+  - r-crul=1.4.0=r43h6115d3f_0
+  - r-curl=5.1.0=r43hf9611b0_0
+  - r-data.table=1.14.8=r43h76d94ec_0
+  - r-dbi=1.1.3=r43h6115d3f_0
+  - r-desc=1.4.2=r43h6115d3f_0
+  - r-digest=0.6.33=r43h884c59f_0
+  - r-downlit=0.4.3=r43h6115d3f_0
+  - r-e1071=1.7_13=r43h884c59f_0
+  - r-ellipsis=0.3.2=r43h76d94ec_0
+  - r-evaluate=0.22=r43h6115d3f_0
+  - r-fansi=1.0.5=r43h76d94ec_0
+  - r-farver=2.1.1=r43h884c59f_0
+  - r-fastmap=1.1.1=r43h884c59f_0
+  - r-fontawesome=0.5.2=r43h6115d3f_0
+  - r-fs=1.6.3=r43h884c59f_0
+  - r-ggplot2=3.4.4=r43h6115d3f_0
+  - r-glue=1.6.2=r43h76d94ec_0
+  - r-gtable=0.3.4=r43h6115d3f_0
+  - r-highr=0.10=r43h6115d3f_0
+  - r-htmltools=0.5.7=r43ha503ecb_0
+  - r-htmlwidgets=1.6.4=r43hc72bb7e_1
+  - r-httpcode=0.3.0=r43h142f84f_0
+  - r-httpuv=1.6.11=r43h884c59f_0
+  - r-httr=1.4.7=r43hc72bb7e_0
+  - r-isoband=0.2.7=r43h884c59f_0
+  - r-jquerylib=0.1.4=r43h6115d3f_0
+  - r-jsonlite=1.8.7=r43h76d94ec_0
+  - r-kernsmooth=2.23_22=r43h640688f_0
+  - r-knitr=1.44=r43h6115d3f_0
+  - r-labeling=0.4.3=r43h6115d3f_0
+  - r-later=1.3.1=r43h884c59f_0
+  - r-lattice=0.22_5=r43h76d94ec_0
+  - r-lazyeval=0.2.2=r43h76d94ec_0
+  - r-lifecycle=1.0.3=r43h142f84f_0
+  - r-magrittr=2.0.3=r43h76d94ec_0
+  - r-mass=7.3_60=r43h76d94ec_0
+  - r-matrix=1.6_1.1=r43h76d94ec_0
+  - r-memoise=2.0.1=r43h6115d3f_0
+  - r-mgcv=1.9_0=r43h76d94ec_0
+  - r-mime=0.12=r43h76d94ec_0
+  - r-miniui=0.1.1.1=r43hc72bb7e_1004
+  - r-munsell=0.5.0=r43h6115d3f_0
+  - r-nlme=3.1_163=r43h640688f_0
+  - r-oai=0.4.0=r43h6115d3f_0
+  - r-openssl=2.1.1=r43h76d94ec_0
+  - r-permute=0.9_7=r43h142f84f_0
+  - r-pillar=1.9.0=r43h6115d3f_0
+  - r-pkgconfig=2.0.3=r43h6115d3f_0
+  - r-pkgdown=2.0.7=r43hc72bb7e_1
+  - r-plyr=1.8.9=r43h884c59f_0
+  - r-processx=3.8.2=r43h76d94ec_0
+  - r-promises=1.2.1=r43h884c59f_0
+  - r-proxy=0.4_27=r43h76d94ec_0
+  - r-ps=1.7.5=r43h76d94ec_0
+  - r-purrr=1.0.2=r43h76d94ec_0
+  - r-r6=2.5.1=r43h6115d3f_0
+  - r-ragg=1.2.7=r43h73ae6e3_0
+  - r-rappdirs=0.3.3=r43h76d94ec_0
+  - r-rcolorbrewer=1.1_3=r43h785f33e_2
+  - r-rcpp=1.0.11=r43h884c59f_0
+  - r-rgbif=3.7.9=r43hc72bb7e_0
+  - r-rlang=1.1.1=r43h884c59f_0
+  - r-rmarkdown=2.25=r43h6115d3f_0
+  - r-rprojroot=2.0.3=r43h6115d3f_0
+  - r-s2=1.1.4=r43h884c59f_0
+  - r-sass=0.4.7=r43h884c59f_0
+  - r-scales=1.2.1=r43h6115d3f_0
+  - r-sf=1.0_15=r43h538aadf_1
+  - r-shiny=1.8.0=r43h785f33e_0
+  - r-sourcetools=0.1.7_1=r43h884c59f_0
+  - r-sp=2.1_2=r43h57805ef_0
+  - r-stringi=1.7.12=r43h884c59f_0
+  - r-stringr=1.5.0=r43h6115d3f_0
+  - r-sys=3.4.2=r43h76d94ec_0
+  - r-systemfonts=1.0.5=r43h884c59f_0
+  - r-textshaping=0.3.7=r43h884c59f_0
+  - r-tibble=3.2.1=r43h76d94ec_0
+  - r-tinytex=0.48=r43h142f84f_0
+  - r-triebeard=0.4.1=r43h884c59f_0
+  - r-units=0.8_4=r43h884c59f_0
+  - r-urltools=1.7.3=r43h884c59f_0
+  - r-utf8=1.2.4=r43h76d94ec_0
+  - r-uuid=1.1_1=r43h76d94ec_0
+  - r-vctrs=0.6.4=r43h884c59f_0
+  - r-vegan=2.6_4=r43hd9ac46e_1
+  - r-viridislite=0.4.2=r43h6115d3f_0
+  - r-wellknown=0.7.4=r43ha503ecb_2
+  - r-whisker=0.4.1=r43h6115d3f_0
+  - r-withr=2.5.1=r43h6115d3f_0
+  - r-wk=0.8.0=r43h884c59f_0
+  - r-xfun=0.40=r43h76d94ec_0
+  - r-xml2=1.3.6=r43hbfba7a4_1
+  - r-xtable=1.8_4=r43h6115d3f_0
+  - r-yaml=2.3.7=r43h76d94ec_0
+  - r-zoo=1.8_12=r43h57805ef_1
+  - re2=2023.06.02=h2873b5e_0
   - readline=8.2=h5eee18b_0
-  - requests=2.13.0=py27_0
-  - rsa=4.0=py_0
-  - s2n=1.3.37=h3358134_0
   - sed=4.8=h7b6447c_0
-  - setuptools=44.0.0=py27_0
-  - simplejson=3.17.0=py27hdf8410d_1
-  - six=1.16.0=pyh6c4a22f_0
-  - snappy=1.1.9=h295c915_0
+  - snappy=1.1.10=h6a678d5_1
   - sqlite=3.41.2=h5eee18b_0
-  - sysroot_linux-64=2.12=he073ed8_15
-  - tiledb=2.13.2=hd532e3d_0
-  - tk=8.6.12=h1ccaba5_0
-  - tktable=2.10=h14c3975_0
-  - toolz=0.8.2=py27_1
-  - typing=3.6.4=py27_2
-  - tzcode=2022g=h166bdaf_0
-  - tzdata=2023c=h04d1e81_0
+  - sysroot_linux-64=2.12=he073ed8_16
+  - tiledb=2.19.0=hc1131af_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - tktable=2.10=h3d55465_1
+  - tzcode=2023d=h3f72095_0
+  - tzdata=2023d=h04d1e81_0
   - udunits2=2.2.25=hd30922c_1
-  - uritemplate=3.0.1=py_0
-  - vincent=0.4.4=py_1
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xerces-c=3.2.4=h55805fa_1
+  - uriparser=0.9.7=h5eee18b_0
+  - xerces-c=3.2.5=hac6953d_0
   - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h7f98852_0
-  - xorg-libsm=1.2.3=hd9c2040_1000
-  - xorg-libx11=1.8.4=h0b41bf4_0
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.7=h8ee46fc_0
   - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxrender=0.9.10=h7f98852_1003
-  - xorg-libxt=1.2.1=h7f98852_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-libxt=1.3.0=hd590300_1
   - xorg-renderproto=0.11.1=h7f98852_1002
   - xorg-xextproto=7.3.0=h0b41bf4_1003
   - xorg-xproto=7.0.31=h27cfd23_1007
-  - xz=5.2.10=h5eee18b_1
-  - zlib=1.2.13=h166bdaf_4
+  - xz=5.4.5=h5eee18b_0
+  - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hc292b87_0
-# prefix: /home/ubuntu/.conda/envs/GBIF_env
+prefix: /usr/local/miniconda/envs/reports
