--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Pull existing image from ECR as cache
-        run: docker pull ${{ steps.ecr-login.outputs.registry }}/reports:staging || true
+        run: docker pull ${{ steps.login-ecr.outputs.registry }}/reports:latest || true
 
       - name: Set image tag based on branch
         id: set-tag
@@ -56,5 +56,5 @@ jobs:
           ECR_REPOSITORY: reports
           IMAGE_TAG: ${{ steps.set-tag.outputs.IMAGE_TAG }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --cache-from ${{ steps.ecr-login.outputs.registry }}/reports:staging .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --cache-from ${{ steps.login-ecr.outputs.registry }}/reports:latest .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
