Added token permissions and removed legacy deployment process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,33 +14,15 @@ on:
   push:
     branches: [main, develop]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     if: github.event_name == 'push' && (github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main')
     runs-on: ubuntu-latest
-    env:
-      SSH_ADDRESS: ${{ github.ref == 'refs/heads/main' && secrets.SSH_ADDRESS_PROD || secrets.SSH_ADDRESS }}
-      SSH_USER: ${{ github.ref == 'refs/heads/main' && secrets.SSH_USER_PROD || secrets.SSH_USER }}
-      SSH_PASSWORD: ${{ github.ref == 'refs/heads/main' && secrets.SSH_PASSWORD_PROD || secrets.SSH_PASSWORD }}
-      SSH_KEY: ${{ github.ref == 'refs/heads/main' && secrets.SSH_KEY_PROD || secrets.SSH_KEY }}
-      DEPLOY_ENVIRONMENT: ${{ github.ref == 'refs/heads/main' && 'PRODUCTION' || 'STAGING' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Add SSH key
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ env.SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 700 ~/.ssh/id_rsa
-      - name: Deploy to server
-        run: |
-          echo "Attempting to deploy to $DEPLOY_ENVIRONMENT environment"
-          echo "Copying files to server located at $SSH_ADDRESS"
-          scp -v -o StrictHostKeyChecking=no -r ./* ${{ env.SSH_USER }}@${{ env.SSH_ADDRESS }}:/home/${{ env.SSH_USER }}/eDNAExplorer
-          echo "Finished deploying to $DEPLOY_ENVIRONMENT environment"
-      - name: Clean up SSH key
-        run: |
-          rm -f ~/.ssh/id_rsa
       - name: Configure AWS Credentials for Dynamic Region
         uses: aws-actions/configure-aws-credentials@v4
         with:
