Update github actions to use OIDC AWS auth.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,12 +25,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials for Dynamic Region
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1 # Set your AWS region
+          audience: sts.amazonaws.com
+          aws-region: ${{ secrets.AWS_ACCESS_DEFAULT_REGION }}
+          role-to-assume: arn:aws:iam::576661951794:role/GitHubActions-ServerlessDeploy
 
       # - name: Login to Amazon ECR
       #   id: login-ecr
