Add missing it-token.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,9 @@
 name: Deploy to AWS ECR
 
+permissions:
+  id-token: write
+  contents: read
+
 on:
   pull_request:
     types: [opened, edited, synchronize, reopened]
