Debug output entire context.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,10 +58,22 @@ jobs:
         run: echo "${{ steps.set-tag.outputs.IMAGE_TAG }}" > image_tag.txt
 
       - name: Upload image tag as an artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: image-tag
           path: image_tag.txt
+
+      - name: Output GitHub context to a file
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "$GITHUB_CONTEXT" > github_context.json
+
+      - name: Upload GitHub context as an artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: github-context
+          path: github_context.json
 
       # - name: Build, tag, and push image to Amazon ECR
       #   env:
