--- a/env.yml
+++ b/env.yml
@@ -107,11 +107,13 @@ dependencies:
   - pandoc=2.12=h06a4308_3
   - pango=1.50.14=ha41ecd1_2
   - pcre2=10.42=hebb0a14_0
+  - pip=23.3.1=py39h06a4308_0
   - pixman=0.43.0=h59595ed_0
   - poppler=23.12.0=h590f24d_0
   - poppler-data=0.4.11=h06a4308_1
   - postgresql=16.1=h7387d8b_7
   - proj=9.3.1=he5811b7_0
+  - python=3.9.18=h955ad1f_0
   - r-askpass=1.2.0=r43h76d94ec_0
   - r-base=4.3.2=hb8ee39d_1
   - r-base64enc=0.1_3=r43h76d94ec_4
@@ -226,6 +228,7 @@ dependencies:
   - re2=2023.06.02=h2873b5e_0
   - readline=8.2=h5eee18b_0
   - sed=4.8=h7b6447c_0
+  - setuptools=68.2.2=py39h06a4308_0
   - snappy=1.1.10=h6a678d5_1
   - sqlite=3.41.2=h5eee18b_0
   - sysroot_linux-64=2.12=he073ed8_16
@@ -233,9 +236,9 @@ dependencies:
   - tk=8.6.13=noxft_h4845f30_101
   - tktable=2.10=h3d55465_1
   - tzcode=2023d=h3f72095_0
-  - tzdata=2023d=h04d1e81_0
   - udunits2=2.2.25=hd30922c_1
   - uriparser=0.9.7=h5eee18b_0
+  - wheel=0.41.2=py39h06a4308_0
   - xerces-c=3.2.5=hac6953d_0
   - xorg-kbproto=1.0.7=h7f98852_1002
   - xorg-libice=1.1.1=hd590300_0
@@ -250,4 +253,34 @@ dependencies:
   - xz=5.4.5=h5eee18b_0
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hc292b87_0
+  - pip:
+    - cachetools==5.3.2
+    - certifi==2024.2.2
+    - charset-normalizer==3.3.2
+    - earthengine-api==0.1.390
+    - google-api-core==2.17.1
+    - google-api-python-client==2.118.0
+    - google-auth==2.28.0
+    - google-auth-httplib2==0.2.0
+    - google-cloud-core==2.4.1
+    - google-cloud-storage==2.14.0
+    - google-crc32c==1.5.0
+    - google-resumable-media==2.7.0
+    - googleapis-common-protos==1.62.0
+    - httplib2==0.22.0
+    - idna==3.6
+    - numpy==1.26.4
+    - pandas==2.2.0
+    - protobuf==4.25.3
+    - pyasn1==0.5.1
+    - pyasn1-modules==0.3.0
+    - pyparsing==3.1.1
+    - python-dateutil==2.8.2
+    - pytz==2024.1
+    - requests==2.31.0
+    - rsa==4.9
+    - six==1.16.0
+    - tzdata==2024.1
+    - uritemplate==4.1.1
+    - urllib3==2.2.0
 prefix: /usr/local/miniconda/envs/reports
