Deploy action no longer attempts to send payload.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,4 @@ jobs:
         run: |
           echo "Triggering call to deploy to $DEPLOY_ENVIRONMENT environment"
           FUNCTION_NAME="edna-explorer-$DEPLOY_ENVIRONMENT-update"
-          aws lambda invoke --function-name $FUNCTION_NAME --payload $PAYLOAD response.json
+          aws lambda invoke --function-name $FUNCTION_NAME response.json
