--- a/env.yml
+++ b/env.yml
@@ -35,6 +35,7 @@ dependencies:
   - gettext=0.21.1=h27087fc_0
   - gfortran_impl_linux-64=13.2.0=h76e1118_3
   - giflib=5.2.1=h5eee18b_3
+  - glpk=5.0=h445213a_0
   - graphite2=1.3.14=h295c915_1
   - gxx_impl_linux-64=13.2.0=h338b0a0_3
   - harfbuzz=8.3.0=h3d44ed6_0
@@ -254,33 +255,33 @@ dependencies:
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hc292b87_0
   - pip:
-    - cachetools==5.3.2
-    - certifi==2024.2.2
-    - charset-normalizer==3.3.2
-    - earthengine-api==0.1.390
-    - google-api-core==2.17.1
-    - google-api-python-client==2.118.0
-    - google-auth==2.28.0
-    - google-auth-httplib2==0.2.0
-    - google-cloud-core==2.4.1
-    - google-cloud-storage==2.14.0
-    - google-crc32c==1.5.0
-    - google-resumable-media==2.7.0
-    - googleapis-common-protos==1.62.0
-    - httplib2==0.22.0
-    - idna==3.6
-    - numpy==1.26.4
-    - pandas==2.2.0
-    - protobuf==4.25.3
-    - pyasn1==0.5.1
-    - pyasn1-modules==0.3.0
-    - pyparsing==3.1.1
-    - python-dateutil==2.8.2
-    - pytz==2024.1
-    - requests==2.31.0
-    - rsa==4.9
-    - six==1.16.0
-    - tzdata==2024.1
-    - uritemplate==4.1.1
-    - urllib3==2.2.0
+      - cachetools==5.3.2
+      - certifi==2024.2.2
+      - charset-normalizer==3.3.2
+      - earthengine-api==0.1.390
+      - google-api-core==2.17.1
+      - google-api-python-client==2.118.0
+      - google-auth==2.28.0
+      - google-auth-httplib2==0.2.0
+      - google-cloud-core==2.4.1
+      - google-cloud-storage==2.14.0
+      - google-crc32c==1.5.0
+      - google-resumable-media==2.7.0
+      - googleapis-common-protos==1.62.0
+      - httplib2==0.22.0
+      - idna==3.6
+      - numpy==1.26.4
+      - pandas==2.2.0
+      - protobuf==4.25.3
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pyparsing==3.1.1
+      - python-dateutil==2.8.2
+      - pytz==2024.1
+      - requests==2.31.0
+      - rsa==4.9
+      - six==1.16.0
+      - tzdata==2024.1
+      - uritemplate==4.1.1
+      - urllib3==2.2.0
 prefix: /usr/local/miniconda/envs/reports
